syntax = "proto3";

package proto;
option go_package = "./;pb";
import "google/protobuf/timestamp.proto";

message Booking {
  int32 id = 9;
  string booking_code = 1;
  google.protobuf.Timestamp cancel_date = 3 ;
  google.protobuf.Timestamp booking_date = 2 ;
  google.protobuf.Timestamp created_at = 4 ;
  google.protobuf.Timestamp updated_at = 5 ;
  int32 flight_id = 6;
  int32 customer_id = 7;
  string status = 8;
  string customer_name = 10;
  string email = 11;
  string license_id = 12;
  string address = 13;
  string phone_number = 15;
  string dob = 16;
}

message CreateBookingInput{
  int32 flight_id = 6;
  string customer_name = 10;
  string email = 11;
  string license_id = 12;
  string address = 13;
  string phone_number = 15;
  string dob = 16;
  int32 customer_id = 17;
}
message ViewBookingInput{
  string booking_code = 1;
  string email = 11;
  string license_id = 12;
}

message CancelBookingInput{
  string booking_code = 1;
  string email = 11;
  string license_id = 12;
}

message GetBookingsHistoryInput{
  int32 customer_id = 2;
  int32 size = 11;
  int32 page = 12;
}



message SearchBookingInput{
  string email = 2;
  string license_id = 3;
  string booking_code = 1;
}

message GetBookingsHistoryResponse{
  repeated Booking bookings = 1;
  int32 size = 11;
  int32 page = 12;
  int32 totalPages = 13;
  int32 totalRecords = 14;
}

message CountBookingsByStatusResponse{
  int32 totalRecords = 1;
  string status = 2;
}

message CountBookingsByStatusInput{
  int32 flight_id = 1;
  string status = 3;
}



service BookingService{
  rpc CreateBooking(CreateBookingInput) returns (Booking);
  rpc ViewBooking(ViewBookingInput) returns (Booking);
  rpc CancelBooking(CancelBookingInput) returns(Booking);
  rpc GetBookingsHistory(GetBookingsHistoryInput) returns (GetBookingsHistoryResponse);
  rpc SearchBooking(SearchBookingInput) returns(Booking);
  rpc CountBookingsByStatus(CountBookingsByStatusInput) returns(CountBookingsByStatusResponse);
}